@@ -10,6 +10,8 @@
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=23&t=21838).
   * Only first image of raw grayscale image was set to GRAY (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21428).
+  * Change sigmoidal-contrast define to inline method to conform with ANSI-C
+    requirements.
 
 2012-09-10  6.7.9-5 Nicolas Robidoux <nicolas.robidoux@gmail...>
   * enhance.c improvements:
